# cs412-2024s-pa

./: README.md
pa00/: README.md  package-lock.json  package.json
pa00/public/: index.html
pa00/src/: linedrawings.js  main.ts
pa01/: GETTING_STARTED.md  package-lock.json  package.json
pa01/public/: index.html
pa01/src/: filter.ts  image.ts  main-composite.ts  main-default.ts  main-zoom.ts  main.ts  rectangle.ts  student.ts
pa02/: package-lock.json  package.json  rollup.config.js  tsconfig.json
pa02/public/: index.html
pa02/src/: gl-shapes.ts  glmesh.ts  main.ts  part1.ts  part2.ts  part3.ts  part4.ts  shader.ts  shapes.ts  wireframe-mesh.ts
pa02/src/shader/: part4.frag.glsl  part4.vert.glsl
pa03/: package-lock.json  package.json  rollup.config.js  tsconfig.json
pa03/public/: index.html
pa03/rollup_plugins/glsl_string/: index.js
pa03/src/: main.ts  part1.ts  part2.ts  part3.ts  part4.ts  part5.ts
pa03/src/shader/: part2.frag.glsl  part3.frag.glsl  part4.frag.glsl  part5.frag.glsl
pa04/: GETTING_STARTED.md  package-lock.json  rollup.config.js
pa04/public/: index.html
pa04/src/: main.ts  main1.ts  main2.ts  main3.ts  obj-mesh.ts  obj.ts  tri-mesh.ts
pa05/: .gitignore  CMakeLists.txt
pa05/cmake/: lutert-cmake-config.cmake
pa05/report/: image_compare.js  index.html  styles.css
pa05/scenes/: book_cover.json  cornell_box.json  cornell_box_lambertian.json  cornell_box_wide.json  test_scene.json  two_spheres.json
pa05/src/: camera.cpp  dielectric.cpp  image.cpp  lambertian.cpp  main.cpp  materiallib.cpp  metal.cpp  parse_scene.cpp  progressbar.cpp  quad.cpp  scene.cpp  sphere.cpp  surface.cpp  task00.cpp  task01.cpp  task02.cpp  task03.cpp  task04.cpp  task05a.cpp  task05b.cpp  task06a.cpp  task06b.cpp  task07.cpp
pa05/src/include/: camera.h  common.h  heatmap.h  hitrecord.h  image.h  json.h  matchers.h  material.h  materiallib.h  progressbar.h  quad.h  random.h  ray.h  scene.h  sphere.h  spherical.h  surface.h  transform.h
